Fixed minor bug with product card text overflow on screen resolution 1370px.

--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -234,7 +234,7 @@
     }
 }
 
-@media only screen and (min-width: 1370px) {
+@media only screen and (min-width: 1371px) {
     .product-card-title,
     .product-card-shop {
         max-width: 220px;
